# annuity-pricing

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  CURRENT_WORK.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  codex_arxiv_stream_e_reaudit.md  pypi_readiness_report.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  docs.yml  notebooks.yml
.hypothesis/constants/: 03bdb9e4b2f978f7  0c3a23ec500ff2a7  0ddd67dfc12b6091  11b04857c6363f08  1490ed767e1a7605  1ad8f5093178eedc  2a1faa18d48cb47e  2b031ec7d66230bc  2ce3a9a354f52ede  314937cf1f685ca3  3c6716e530b4877e  3c81195497df65bf  3cadcee7df7f5284  3cd34321f5eac29a  4b62f35506ba7833  54f135c9ce825fb2  564214c8e49701c2  586970e32a4d070c  5c522da673113655  5e6d9697390d86bd  5f9bad3874e81853  604a48fb61197760  617c8c85957d9f1c  6605439f5e6c4840  66ff0baeb07cf99b  712cda12685f8dcc  7cbe4b431c84663e  7cda46ef2411a537  85e536fdd08dff0a  86d2621c190f10f9  88d19be705013e3f  8ad8110f7af0a386  901ee94a4d4985e8  90f36f09a5b95995  933dc80769cfc5b7  9d2d2885db569a7a  9e6c037fdc899579  9fc911f94ae3b870  a329245b142cb08f  a520aa7d4c5a33c3  (+35 more)
archive/roadmaps/: CURRENT_WORK_v1.0_2025-12-06.md  README.md  ROADMAP_EXTENDED_v1.0_2025-12-06.md  ROADMAP_v1.0_phases-0-10_2025-12-06.md
docs/: ASSUMPTIONS_AND_VALIDATIONS.md  Makefile  TOLERANCE_JUSTIFICATION.md  conf.py  index.md  requirements.txt
docs/api/: behavioral.md  glwb.md  loaders.md  options.md  products.md  regulatory.md
docs/assumptions/: BEHAVIOR_CALIBRATION.md
docs/guides/: behavior_calibration.md  getting_started.md  glwb_walkthrough.md  installation.md  market_setup.md  pricing_fia.md  pricing_myga.md  pricing_rila.md  regulatory_vm21_vm22.md
docs/reference/: changelog.md  contributing.md
docs/regulatory/: AG43_COMPLIANCE_GAP.md  SR_11_7_MAPPING.md
docs/stress_testing/: STRESS_TESTING_GUIDE.md
docs/validation/: cross_validation.md  golden_cases.md
examples/: 01_fair_rates.py  02_competitive_positioning.py  03_glwb_valuation.py  04_stress_testing.py  README.md
examples/failures/: README.md  failure_01_no_risk_neutral.py  failure_02_put_call_parity.py  failure_03_arbitrage_bounds.py  failure_04_buffer_floor_confusion.py  failure_05_mc_divergence.py  failure_06_negative_vol.py  failure_07_no_floor_enforcement.py
notebooks/: 02_competitive_analysis.ipynb  03_fia_rila_pricing_demo.ipynb  README.md
notebooks/tier_0_onboarding/: 00_pricing_foundations.ipynb
notebooks/tier_1_core_concepts/: 01_risk_neutral_valuation.ipynb  02_put_call_parity.ipynb  03_arbitrage_bounds.ipynb
notebooks/tier_2_products/: 05_fia_crediting_methods.ipynb  06_rila_buffer_vs_floor.ipynb  08_monte_carlo_convergence.ipynb
notebooks/tier_3_integration/: 10_end_to_end_pricing.ipynb  12_cross_library_validation.ipynb
paper/: main.tex  references.bib  zenodo.json
paper/styles/: quantfin.cls
scripts/: generate_glwb_golden_vectors.py  generate_mortality_goldens.R  generate_mortality_goldens.jl  generate_payoff_truth_tables.py  generate_synthetic_rates.py  regenerate_goldens.py  setup_check.py  validate.sh
src/annuity_pricing/: __init__.py
tests/: conftest.py
tests/anti_patterns/: test_arbitrage_bounds.py  test_buffer_mechanics.py  test_buffer_vs_floor.py  test_put_call_parity.py  test_spread_rate_halt.py  test_vectorized_consistency.py
tests/chaos/: test_chaos_scenarios.py
tests/golden/: test_golden_regression.py
tests/integration/: test_fia_heston.py  test_glwb_registry.py  test_hedge_effectiveness.py  test_hedging_workflows.py  test_myga_pricing_pipeline.py  test_portfolio_workflows.py  test_pricing_gradients.py  test_product_registry.py  test_regulatory_workflows.py  test_rila_heston.py  test_stress_workflows.py  test_validation_gates.py  test_vertical_slice.py  test_wink_pipeline.py
tests/performance/: test_pricing_performance.py
tests/properties/: __init__.py  test_greeks_properties.py  test_mc_properties.py  test_option_properties.py  test_payoff_properties.py
tests/references/: glwb_golden_monthly.csv  payoff_truth_tables.csv  synthetic_rates.csv
tests/smoke/: test_smoke.py
tests/unit/: test_adapters.py  test_behavioral_dynamic_lapse.py  test_behavioral_expenses.py  test_behavioral_withdrawal.py  test_bs_extreme_vol.py  test_bs_near_expiry.py  test_bs_negative_rates.py  test_calibration.py  test_competitive_positioning.py  test_competitive_rankings.py  test_competitive_spreads.py  test_config_tolerances.py  test_credit.py  test_data_cleaner.py  test_data_loader.py  test_gbm_distribution.py  test_glwb_gwb_tracker.py  test_glwb_path_sim.py  test_glwb_rollup.py  test_heston_cos.py  test_loaders_mortality.py  test_loaders_yield_curve.py  test_myga_pricer.py  test_myga_valuation.py  test_option_payoffs_fia.py  test_option_payoffs_rila.py  test_path_consistency.py  test_products_fia.py  test_products_rila.py  test_registry_validation.py  test_regulatory_disclaimers.py  test_regulatory_scenarios.py  test_regulatory_vm21.py  test_regulatory_vm22.py  test_simulation_gbm.py  test_simulation_monte_carlo.py  test_soa_benchmarks.py  test_soa_dynamic_lapse.py  test_soa_withdrawal.py  test_stress_historical.py  (+5 more)
tests/validation/: test_asian_cap_benchmark.py  test_behavior_vs_soa.py  test_bs_known_answers.py  test_bs_vs_oracle.py  test_credit_validation.py  test_cross_library_convergence.py  test_fia_rila_extreme_scenarios.py  test_fia_rila_long_dated.py  test_fia_vs_financepy.py  test_golden_payoffs.py  test_greeks_vs_quantlib.py  test_heston_cos_vs_quantlib.py  test_heston_vs_quantlib.py  test_martingale_property.py  test_mc_convergence.py  test_mc_convergence_rate.py  test_mc_multi_seed.py  test_mortality_golden.py  test_pv_discounting.py  test_rila_vs_quantlib.py  test_sabr_vs_quantlib.py  (+2 more)
wink-research-archive/: edward_jones_myga_timeline.md
(+75 files in other folders)
