[project]
name = "annuity-pricing"
version = "0.2.0"
description = "Actuarial pricing for MYGA, FIA, and RILA annuity products with GLWB guarantees"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Brandon Behring"}
]

keywords = [
    "annuity",
    "actuarial",
    "pricing",
    "FIA",
    "RILA",
    "MYGA",
    "GLWB",
    "GMWB",
    "options",
    "black-scholes",
    "monte-carlo",
    "VM-21",
    "VM-22",
    "insurance",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

dependencies = [
    # Core
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "pyarrow>=14.0",

    # Market Data
    "yfinance>=0.2",          # Yahoo Finance (free index data)
    "fredapi>=0.5",           # FRED API (Treasury curves)
]

[project.urls]
Homepage = "https://github.com/bbehring/annuity-pricing"
Repository = "https://github.com/bbehring/annuity-pricing"
Documentation = "https://annuity-pricing.readthedocs.io"
Issues = "https://github.com/bbehring/annuity-pricing/issues"
Changelog = "https://github.com/bbehring/annuity-pricing/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
viz = [
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "plotly>=5.0",
    "jupyter>=1.0",
    "nbconvert>=7.0",         # For notebook execution
]
vol = [
    "pysabr>=0.3",            # SABR volatility fitting (Level 3)
]
validation = [
    "financepy>=0.350",       # Options pricing cross-validation
    "QuantLib-Python>=1.31",  # Yield curves, bonds cross-validation
    "pyfeng>=0.2",            # SABR, Heston cross-validation
    "pycurve>=0.5",           # Nelson-Siegel cross-validation
]
actuarial = [
    "actuarialmath>=1.0",     # Life contingencies (Python)
    "lifelib>=0.8",           # Actuarial models library
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1",
    "myst-nb>=1.0",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
]
all = [
    "annuity-pricing[dev,viz,vol,validation,actuarial,docs]",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
# Balanced strictness - catch real bugs, allow numpy flexibility
warn_return_any = false  # Too noisy with numpy operations
warn_unused_configs = true
disallow_untyped_defs = true  # Functions need type hints
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Ignore comments may vary by numpy version
# Generic types without params are ok (ndarray[], dict[] too verbose)
disallow_any_generics = false

# Ignore missing stubs for external dependencies
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "scipy.*",
    "numpy.*",
    "pandas_datareader.*",
    "QuantLib.*",
    "financepy.*",
    "pyfeng.*",
    "pycurve.*",
    "yfinance.*",
    "fredapi.*",
    "pyarrow.*",
]
ignore_missing_imports = true
ignore_errors = true

# Relaxed checking for prototype modules (regulatory, stress testing, GLWB)
[[tool.mypy.overrides]]
module = [
    "annuity_pricing.regulatory.*",
    "annuity_pricing.stress_testing.*",
    "annuity_pricing.glwb.*",
    "annuity_pricing.options.simulation.*",
    "annuity_pricing.options.pricing.heston",
    "annuity_pricing.options.pricing.heston_cos",
    "annuity_pricing.behavioral.calibration",
    "annuity_pricing.rate_setting.recommender",
    "annuity_pricing.loaders.*",
]
ignore_errors = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
minversion = "7.0"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # Allow SyntheticDataWarning in tests (Phase 0 Julia port prep)
    "ignore::annuity_pricing.data.loader.SyntheticDataWarning",
]
markers = [
    "anti_pattern: Bug prevention tests (MUST pass before commit)",
    "validation: External verification tests (known answers, convergence)",
    "unit: Standard unit tests",
    "integration: End-to-end tests",
    "slow: Tests that take > 10 seconds",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
# Overall: 75% minimum (aggregate floor)
# Per-marker thresholds enforced in CI workflow
# See: .github/workflows/ci.yml for per-marker coverage gates

[tool.coverage.run]
source = ["src/annuity_pricing"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
# Fail if overall coverage drops below 75%
fail_under = 75
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
